--- a/device/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
+++ b/device/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
@@ -208,10 +208,12 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="check_mobile_data_for_cf" value="true" />
         <boolean name="config_enable_callbarring_over_ims" value="true" />
         <boolean name="config_spn_override_enabled" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="460" mnc="01">
         <boolean name="config_spn_override_enabled" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="460" mnc="02">
@@ -219,15 +221,26 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="check_mobile_data_for_cf" value="true" />
         <boolean name="config_enable_callbarring_over_ims" value="true" />
         <boolean name="config_spn_override_enabled" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="460" mnc="03">
         <boolean name="ascii_7_bit_support_for_long_message" value="true" />
         <boolean name="cdma_cw_cf_enabled_bool" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
+    </carrier_config>
+
+    <carrier_config mcc="460" mnc="04">
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
+    </carrier_config>
+
+    <carrier_config mcc="460" mnc="05">
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="460" mnc="06">
         <boolean name="config_spn_override_enabled" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="460" mnc="07">
@@ -235,22 +248,34 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.-->
         <boolean name="check_mobile_data_for_cf" value="true" />
         <boolean name="config_enable_callbarring_over_ims" value="true" />
         <boolean name="config_spn_override_enabled" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="460" mnc="08">
         <boolean name="config_enable_mms_with_mobile_data_off" value="true" />
         <boolean name="check_mobile_data_for_cf" value="true" />
         <boolean name="config_enable_callbarring_over_ims" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
+    </carrier_config>
+
+    <carrier_config mcc="460" mnc="09">
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
+    </carrier_config>
+
+    <carrier_config mcc="460" mnc="10">
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="460" mnc="11">
         <boolean name="ascii_7_bit_support_for_long_message" value="true" />
         <boolean name="cdma_cw_cf_enabled_bool" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="460" mnc="12">
         <boolean name="ascii_7_bit_support_for_long_message" value="true" />
         <boolean name="cdma_cw_cf_enabled_bool" value="true" />
+        <boolean name="allow_emergency_numbers_in_call_log_bool" value="true"/>
     </carrier_config>
 
     <carrier_config mcc="310" mnc="030">
