--- a/product/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/product/overlay/frameworks/base/core/res/res/values/config.xml
@@ -45,4 +45,14 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <integer name="config_screenBrightnessDoze">17</integer>
     <bool name="config_powerDecoupleInteractiveModeFromDisplay">true</bool>
 
+    <!-- List of regexpressions describing the interface (if any) that represent tetherable
+         Wifi interfaces.  If the device doesn't want to support tethering over Wifi this
+         should be empty.  An example would be "softap.*" -->
+    <string-array translatable="false" name="config_tether_wifi_regexs">
+        <item>"wlan0"</item>
+        <item>"wigig0"</item>
+        <item>"softap0"</item>
+    </string-array>
+
+
 </resources>
